--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.defaultInterpreterPath": "./venv/bin/python",
-    "python.terminal.activateEnvironment": true
+    // "python.defaultInterpreterPath": "./venv/bin/python",
+    // "python.terminal.activateEnvironment": true
 }
