add some data to the repo to support online notebook work

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 data/
 
 # track the DVC meta-files (.dvc) and DVC's internal .gitignore
-!data/**/*.dvc
+# !data/**/*.dvc
 !data/.gitignore
+!data/current/
 
-*.csv
+#*.csv
 *.h5
 *.keras
 venv
